manuscripts/elife-19466/v1/manuscript_v1.md
# Origin and evolution of transporter substrate specificity within the NPF family

## Authors

- Morten Egevang Jørgensen<sup>1</sup> ([ORCID: 0000-0001-6503-0495](https://orcid.org/0000-0001-6503-0495))
- Deyang Xu<sup>1</sup> ([ORCID: 0000-0003-1015-6458](https://orcid.org/0000-0003-1015-6458))
- Christoph Crocoll<sup>1</sup>
- David Ramírez<sup>3</sup>
- Mohammed Saddik Motawia<sup>5</sup>
- Carl Erik Olsen<sup>6</sup>
- Hussam Hassan Nour-Eldin<sup>1</sup> ([ORCID: 0000-0001-6660-0509](https://orcid.org/0000-0001-6660-0509)) †
- Barbara Ann Halkier<sup>1</sup> ([ORCID: 0000-0002-3742-702X](https://orcid.org/0000-0002-3742-702X)) †

### Affiliations

1. DynaMo Center, Department of Plant and Environmental Sciences, Faculty of Science University of Copenhagen Frederiksberg Denmark
2. Copenhagen Plant Science Center, Department of Plant and Environmental Sciences, Faculty of Science University of Copenhagen Frederiksberg Denmark
3. Centro de Bioinformática y Simulación Molecular (CBSM), Universidad de Talca Talca Chile
4. Instituto de Innovación Basada en Ciencia, Universidad de Talca Talca Chile
5. Center for Plant Plasticity, Department of Plant and Environmental Sciences, Faculty of Science University of Copenhagen Frederiksberg Denmark
6. Department of Plant and Environmental Sciences, Faculty of Science University of Copenhagen Frederiksberg Denmark

† Corresponding author

## Abstract

10.7554/eLife.19466.001 Despite vast diversity in metabolites and the matching substrate specificity of their transporters, little is known about how evolution of transporter substrate specificities is linked to emergence of substrates via evolution of biosynthetic pathways. Transporter specificity towards the recently evolved glucosinolates characteristic of Brassicales is shown to evolve prior to emergence of glucosinolate biosynthesis. Furthermore, we show that glucosinolate transporters belonging to the ubiquitous NRT1/PTR FAMILY (NPF) likely evolved from transporters of the ancestral cyanogenic glucosides found across more than 2500 species outside of the Brassicales . Biochemical characterization of orthologs along the phylogenetic lineage from cassava to A. thaliana, suggests that alterations in the electrogenicity of the transporters accompanied changes in substrate specificity. Linking the evolutionary path of transporter substrate specificities to that of the biosynthetic pathways, exemplify how transporter substrate specificities originate and evolve as new biosynthesis pathways emerge. DOI: http://dx.doi.org/10.7554/eLife.19466.001

## Introduction

Phospholipid-based cell membranes are the foundation for extant cellular life and with them arose the need for carrier proteins to shuttle metabolites across the semi-permeable membranes (Mansy et al., 2008; Deamer and Dworkin, 2005). New biosynthesis pathways continuously emerged throughout evolution, resulting in a vast diversity in metabolite chemical structures (>200.000 structures tentatively identified in the plant kingdom alone), where some are restricted to certain taxa and others are found broadly (Weng et al., 2012). Matching the vast structural diversity of metabolites, approximately 10% of coding sequences of contemporary genomes encode transport proteins with diverse substrate specificities (Saier and Ren, 2006) that enable transport of metabolites and ions into and out of cells. However, the evolutionary path that leads to the rise of new transporter substrate specificity upon emergence of new metabolites is unknown. Classical evolution theory (Ohno, 2013) and several studies (e.g. Fani and Fondi, 2009; Prasad et al., 2012) support the hypothesis that new enzyme functions arise in duplicated genes if they are subject to unique selection pressure, - alternatively they rapidly become pseudogenes. A key example is found in the evolution of mineral corticoid and glucocorticoid receptors found in vertebrates (Bridgham et al., 2006; Carroll et al., 2008). These two receptors evolved post duplication of a dual specificity aldosterone and cortisol receptor basal to the jawed vertebrate lineage (Bridgham et al., 2006). However, aldosterone biosynthesis did not arise before the advent of tetrapods suggesting that the ancestral receptor evolved affinity towards aldosterone before the hormone was present, possibly as a by-product of the receptors’ affinity towards chemically similar ligands (Bridgham et al., 2006; Carroll et al., 2008). Thus, it appears that selection pressure enforced upon related but distinct ligands can drive the emergence of receptors’ affinity towards a new substrate. In comparison, it is not clear if new transporters evolve de novo with emergence of new substrates, or whether gene duplications allow ancestral multifunctional proteins to take on greater specificity (Khersonsky and Tawfik, 2010).

To answer this question, it is necessary to use a model system where the evolution of the biosynthetic pathway is known and where transporters have been identified. As a model system, we used the Brassicales-specific glucosinolate defense compounds with a biosynthetic pathway that diversified from the ancestral cyanogenic glucoside pathway found in more than 2500 plant species (Sønderby et al., 2010a; Halkier and Gershenzon, 2006; Bak et al., 1998; Clausen et al., 2015; Mithen et al., 2010). The two pathways share the initial enzymatic amino acid to oxime conversion, but produce structurally different end products (Clausen et al., 2015). Through an arms race between plants and interacting organisms (Bidart-Bouzat and Kliebenstein, 2008; Züst et al., 2012; Kliebenstein et al., 2005; de Vos et al., 2008; Sanchez-Vallet et al., 2010; Prasad et al., 2012; Newton et al., 2009; Fahey et al., 2001; Agerbirk and Olsen, 2012), the glucosinolate pathway evolved to produce >130 glucosinolate structures with diverse amino acid-derived side chains (Fahey et al., 2001; Agerbirk and Olsen, 2012). Also, two H+/glucosinolate symporters, GTR1 and GTR2, belonging to the NPF family (Léran et al., 2014) and with broad glucosinolate specificity (i.e. no discrimination against amino acid side chain) were identified in Arabidopsis thaliana (Nour-Eldin et al., 2012) that predominantly produces aliphatic and indole glucosinolates (Mithen et al., 2010; Brown et al., 2003). Although transporters for cyanogenic glucosides are yet to be identified (Jørgensen et al., 2005), we set out to investigate whether the evolution of a new biosynthetic pathway (here glucosinolates from cyanogenic glucosides) promoted the co-evolution of transporter specificity, i.e. did glucosinolate transporters originate from cyanogenic glucoside transporters in the NPF family? Furthermore, in planta studies suggest the existence of an additional glucosinolate transporter with narrow specificity for the recently evolved indole glucosinolates (Andersen et al., 2013) that are essential for innate immune responses (Sanchez-Vallet et al., 2010; Clay et al., 2009; Bednarek et al., 2009). We therefore investigated if evolution within a biosynthetic pathway (here emergence of indole glucosinolates) is accompanied by evolution in transporter substrate specificity.

Here we identify the first cyanogenic glucoside transporter in cassava and the first indole-specific glucosinolate transporter in A. thaliana. By characterizing substrate specificity and electrogenicity in orthologs along the phylogenetic lineage from cassava to A. thaliana, we provide a model for the evolutionary path of the substrate specificity of a plant specialized metabolite transporter. Surprisingly, we show that glucosinolate transport capacity likely occurred prior to the emergence of glucosinolate biosynthesis in dual-specificity transporters of cyanogenic glucosides and glucosinolates. With the emergence of glucosinolate biosynthesis, the transporters lost the capacity to transport cyanogenic glucosides. Moreover, we show that the first glucosinolate transporters had broad specificity and later subfunctionalized towards specific classes of glucosinolates. Our data suggests that changes in electrogenicity have accompanied the evolutionary changes in substrate specificity. Our results exemplify how new transporter substrate specificities evolve when new metabolites arise.

## Results and discussion

## Identification of an indole-specific glucosinolate transporter

To assess the evolutionary path of GTR transporters, we first set out to identify the putative indole-specific glucosinolate transporter. In a previous study (

![Figure 1.](https://cdn.elifesciences.org/articles/19466/elife-19466-fig1-v1.jpg)

**Figure 1.:** (A) Bayesian inference (MrBayes) tree (s.d.< 0.01) of the A. thaliana NPF family with reduced phylogenies of NPF1.x, NPF3.x, NPF4.x, NPF5.x, NPF6.x, NPF7.x, NPF8.x and NPF2.1–7 clades (x denotes the subfamily number) as previously annotated (Léran et al., 2014). Numbers in brackets indicate the number of genes in reduced phylogeny. Green circles at nodes represent a posterior probability of 1 (maximum is 1). Values at nodes separated by a backslash represent MrBayes values below 1 in red, followed by RAxML generated bootstrap values in black (only reported when Mrbayes value is below 1). GTR1, GTR2, GTR3 and 3 other homologs tested in B) are highlighted with red branches. For non-reduced phylogeny, see Figure 1—figure supplement 1. (B) The chemical structure of 4-methylthiobutyl glucosinolate (4MTB) and indol-3-ylmethyl glucosinolate (I3M). (C) GTR1, GTR2, GTR3, NPF2.14, NPF2.13 and NPF2.8 were expressed individually in 15 X. laevis oocytes and transport activity was measured in the presence of 0.2 mM 4MTB (black bars) or 0.2 mM I3M (green bars). 4MTB or I3M accumulated within oocytes were quantified by LC-MS analyses in 3 × 5 oocytes for each gene. Error bars represent ± s.d. n = 3, experiment repeated two times; nd=none detected.DOI: http://dx.doi.org/10.7554/eLife.19466.003

![Figure 1—figure supplement 1.](https://cdn.elifesciences.org/articles/19466/elife-19466-fig1-figsupp1-v1.jpg)

**Figure 1—figure supplement 1.:** Bayesian inference (MrBayes) tree (s.d.< 0.01) of the A. thaliana NPF family with NPF names in parentheses as previously annotated (Léran et al., 2014). Green circles at nodes represent a posterior probability of 1 (maximum is 1). Values at nodes separated by a backslash represent MrBayes values below 1 in red, followed by RAxML generated bootstrap values in black (only reported when Mrbayes value is below 1). Scale bar indicates number of substitutions per site.DOI: http://dx.doi.org/10.7554/eLife.19466.004

![Figure 2.](https://cdn.elifesciences.org/articles/19466/elife-19466-fig2-v1.jpg)

**Figure 2.:** (A–B) Normalized IV (Current-Voltage) curve of 4MTB (A)- and I3M (B)-induced currents for GTR1 (black circles)- and GTR3 (green circles)-expressing oocytes exposed to 100 µM substrate at pH5. Both GTR1 and GTR3 currents were normalized to GTR1 currents elicited at saturating 4MTB concentrations and at a membrane potential of −60 mV (Error bars represent ± s.e., n = 6, experiment repeated two times). (C–D) Time-dependent accumulation of I3M (C) and 4MTB (D), respectively, relative to assay media concentration in GTR1- and GTR3-expressing oocytes. Accumulated 4MTB or I3M were quantified by LC-MS in 3 × 5 oocytes for each gene after 3, 4 and 5 hr of incubation in a standard pH5 Kulori buffer containing 0.2 mM I3M or 0.2 mM 4MTB (error bars represent ± s.d. n = 3). Dotted line represents media concentration. (E–F) Normalized I3M-induced currents for GTR3 (E) or GTR1 (F) measured at a membrane potential of −60 mV and pH 5 plotted against increasing I3M concentrations. The saturation curve was fitted with a Michaelis-Menten equation represented by a solid line. Each oocyte dataset was normalized to currents elicited at 0.8 mM I3M concentration at −60 mV. The insert shows the apparent Km as a function of membrane potential. Error bars represent ± s.e. of mean, n = 6, experiment repeated two times.DOI: http://dx.doi.org/10.7554/eLife.19466.005

![Figure 2—figure supplement 1.](https://cdn.elifesciences.org/articles/19466/elife-19466-fig2-figsupp1-v1.jpg)

**Figure 2—figure supplement 1.:** X. laevis oocytes.(A–B) Time-dependent I3M (A) and 4MTB (B) uptake by GTR1- and GTR3-expressing oocytes. This data was shown in Figure 2 as up-concentration relative to assay media concentration. Here substrate amounts are shown in pmol per oocyte. Accumulated 4MTB or I3M was quantified by LC-MS in 3 × 5 oocytes for each gene after 3, 4 and 5 hr of incubation in a standard pH5 kulori buffer containing 0.2M I3M or 0.2 µM 4MTB. Error bars represent ± s.d. of mean for data, n = 3.DOI: http://dx.doi.org/10.7554/eLife.19466.006

![Figure 2—figure supplement 2.](https://cdn.elifesciences.org/articles/19466/elife-19466-fig2-figsupp2-v1.jpg)

**Figure 2—figure supplement 2.:** m measurement.Normalized I3M-induced currents of GTR2-expressing oocytes measured at a membrane potential of −60 mV and pH 5 were plotted against increasing I3M concentrations. The saturation curve was fitted with a Michaelis-Menten equation – represented by a solid line. Insert shows apparent Km as a function of clamped membrane potential. Each oocyte dataset was normalized to I3M-induced currents elicited at 0.8 mM I3M concentration at −60 mV. The insert shows the apparent Km as a function of membrane potential. Error bars represent ± s.e. of mean for data obtained from six different oocytes per experiment, experiment repeated two times.DOI: http://dx.doi.org/10.7554/eLife.19466.007

Plotting currents at −60 mV as a function of increasing I3M concentrations yielded a saturation curve best fitted by a Michaelis-Menten equation with K

![Figure 3.](https://cdn.elifesciences.org/articles/19466/elife-19466-fig3-v1.jpg)

**Figure 3.:** X. laevis oocytes.(A–D) Competition for uptake of I3M and 4MTB into oocytes expressing GTR1 or GTR3. (A) Quantification of 4MTB uptake when oocytes were exposed to high 4MTB concentration (2 mM) alone or in combination with low concentration of I3M (0.2 mM). (B) Quantification of I3M uptake when low I3M concentration (0.2 mM) was competed with high concentration of 4MTB (2 mM). (C) Quantification of I3M when oocytes were exposed to high I3M concentration (2 mM) alone or in combination with low concentration of 4MTB (0.2 mM). (D) Quantification of 4MTB uptake when oocytes were exposed to low I3M concentration (0.2 mM) alone or in combination with high concentration of 4MTB (2 mM). Accumulated 4MTB (A and D) or I3M (B and C) was quantified by LC-MS in 3 × 5 oocytes for each gene. Two tailed T-test, **p<0.001 vs non-competed, *p<0.05 vs non-competed. NS= not significantly different (Error bars represent ± s.d. of mean for data obtained from three times five different oocytes per experiment). (E–G) Quantification of nitrate and glucosinolate competition assays. (E) Quantification of I3M uptake in GTR3-expressing oocytes when saturating I3M concentration (0.1 mM) is competed with high concentration of NO3- (10 mM) or saturating concentration of 4MTB (0.1 mM). (F) Quantification of 4MTB uptake in GTR3-expressing oocytes when saturating 4MTB concentration (0.1 mM) is competed with high concentration of NO3- (10 mM). (G) Quantification of NO3- uptake in GTR3-expressing oocytes when high concentration of NO3- (10 mM) is competed by 0.1 mM 4MTB or saturating concentration of I3M (0.1 mM). Accumulated I3M (E) or 4MTB (F) was quantified by LC-MS in 3 × 5 oocytes for each gene. Accumulated NO3- (G) was quantified by ICP-MS in three oocytes for each gene. Error bars represent ± s.d. of mean, n = 3. Groups in subfigures are determined by one-way ANOVA followed by Holm-Sidak post-hoc analysis (p<0.05).DOI: http://dx.doi.org/10.7554/eLife.19466.008

We investigated the physiological relevance of GTR3´s role as an indole glucosinolate transporter

![Figure 4.](https://cdn.elifesciences.org/articles/19466/elife-19466-fig4-v1.jpg)

**Figure 4.:** In planta characterization of the indole-specific glucosinolate transporter GTR3.(A–B) Indole glucosinolate content in (A) root and (B) rosette of non-grafted hydroponically grown wildtype, gtr3, gtr1 gtr2 dko and gtr1 gtr2 gtr3 tko plants. The box is determined by the 25th and 75th percentiles. The whiskers are determined by the 5th and 95th percentiles. Median and mean are shown as line and square. Groups in subfigures are determined by one-way ANOVA followed by Tukey HSD Calculator multiple comparison post-hoc analysis (p<0.05). Data presented is one of two individual experiments, each containing 8–12 repeats (n) (see Figure 4—source data 1–2 for individual glucosinolate data points and individual n; error bars and parentheses are s.d. (C) Indole glucosinolate concentrations of micro-grafted 3-week-old plate-grown Arabidopsis wildtype (Col-0) and mutants. Rosettes and roots from wild type (wt), the glucosinolate biosynthesis null mutant myb28 myb29 cyp79b2 cyp79b3 (qko) and the gtr1 gtr2 gtr3 mutant (tko) were reciprocally grafted using 4-day-old seedlings. Glucosinolate content in the rosette and roots was quantified by LC-MS in 3-week-old plants. Data presented is one of two individual experiments, each containing 8–16 repeats (n) (see Figure 4—source data 3–4 for individual glucosinolate data points and individual n; error bars and parentheses are s.d. Groups in subfigures are determined by one-way ANOVA (p<0.05). n.d. none detected.DOI: http://dx.doi.org/10.7554/eLife.19466.00910.7554/eLife.19466.010Figure 4—source data 1.gtr3, gtr1 gtr2 dko and gtr1 gtr2 gtr3 tko plants.Glucosinolate content in rosettes of three-week-old hydroponically grown plants determined by LC-MS. Data presented is one of two individual experiments. Data are given as means and standard deviation (SD) for individual glucosinolates (nmoles/mg FW), total short-chained aliphatic glucosinolates (SC), total long-chained aliphatic glucosinolates (LC), total aliphatic glucosinolates (AG) and total indole glucosinolates (IG). Differences were tested by ANOVA followed by Post-hoc Tukey HSD Calculator multiple comparison (3mtp, 3-methylthiobutylglucosinolate; 3msp, 3-methylsulfinylpropylglucosinolate; 4mtb, 4-methylthiobutylglucosinolate; 4msb, 4-methylsulfinylbutylglucosinolate;5msp,5-methylsulfinylpentylglucosinolate;7mth,7-(methylthio)heptylglucosinolate,7msh,7-ethylsulfinylheptylglucosinolate;8mso, 8-methylsulfinyloctylglucosinolate; I3M, indol-3-ylmethylglucosinolate; 4MOI3M, 4-methoxy-indol-3-ylmethylglucosinolate; NMOI3M, n,-methoxyindol-3-ylmethylglucosinolate).DOI: http://dx.doi.org/10.7554/eLife.19466.01010.7554/eLife.19466.011Figure 4—source data 2.gtr3, gtr1 gtr2 dko and gtr1 gtr2 gtr3 tko plants.Glucosinolate content in roots of three-week-old hydroponically grown plants determined by LC-MS. Data presented is one of two individual experiments. Data are given as means and standard deviation (SD) for individual glucosinolates (nmoles/mg FW), total short-chained aliphatic glucosinolates (SC), total long-chained aliphatic glucosinolates (LC), total aliphatic glucosinolates (AG) and total indole glucosinolates (IG). Differences were tested by ANOVA followed by Post-hoc Tukey HSD Calculator multiple comparison (3mtp, 3-methylthiobutylglucosinolate; 3msp, 3-methylsulfinylpropylglucosinolate; 4mtb, 4-methylthiobutylglucosinolate; 4msb, 4-methylsulfinylbutylglucosinolate;5msp,5-methylsulfinylpentylglucosinolate;7mth,7-(methylthio)heptylglucosinolate,7msh,7-ethylsulfinylheptylglucosinolate;8mso, 8-methylsulfinyloctylglucosinolate; I3M, indol-3-ylmethylglucosinolate; 4MOI3M, 4-methoxy-indol-3-ylmethylglucosinolate; NMOI3M, n,-methoxyindol-3-ylmethylglucosinolate).DOI: http://dx.doi.org/10.7554/eLife.19466.01110.7554/eLife.19466.012Figure 4—source data 3.Glucosinolate content in rosettes of three-week-old micro-grafted plants determined by LC-MS. Data presented is one of two individual experiments. Data are given as means and standard deviation (SD) for individual glucosinolates (nmoles/mg FW), total short-chained aliphatic glucosinolates (SC), total long-chained aliphatic glucosinolates (LC), total aliphatic glucosinolates (AG) and total indole glucosinolates (IG). Differences were tested by ANOVA followed by Post-hoc Tukey HSD Calculator multiple comparison (3mtp, 3-methylthiobutylglucosinolate; 3msp, 3-methylsulfinylpropylglucosinolate; 4mtb, 4-methylthiobutylglucosinolate; 4msb, 4-methylsulfinylbutylglucosinolate;5msp,5-methylsulfinylpentylglucosinolate;7mth,7-(methylthio)heptylglucosinolate,7msh,7-ethylsulfinylheptylglucosinolate;8mso, 8-methylsulfinyloctylglucosinolate; I3M, indol-3-ylmethylglucosinolate; 4MOI3M, 4-methoxy-indol-3-ylmethylglucosinolate; NMOI3M, n,-methoxyindol-3-ylmethylglucosinolate).DOI: http://dx.doi.org/10.7554/eLife.19466.01210.7554/eLife.19466.013Figure 4—source data 4.Glucosinolate content in roots of three-week-old micro-grafted plants determined by LC-MS. Data presented is one of two individual experiments. Data are given as means and standard deviation (SD) for individual glucosinolates (nmoles/mg FW). total short-chained aliphatic glucosinolates (SC). Total long-chained aliphatic glucosinolates (LC). total aliphatic glucosinolates (AG) and total indole glucosinolates (IG). Differences were tested by ANOVA followed by Post-hoc Tukey HSD Calculator multiple comparison (3mtp. 3-methylthiobutylglucosinolate; 3msp. 3-methylsulfinylpropylglucosinolate; 4mtb. 4-methylthiobutylglucosinolate; 4msb. 4-methylsulfinylbutylglucosinolate;5msp.5-methylsulfinylpentylglucosinolate;7mth.7-(methylthio)heptylglucosinolate.7msh.7-ethylsulfinylheptylglucosinolate;8mso. 8-methylsulfinyloctylglucosinolate; I3M. indol-3-ylmethylglucosinolate; 4MOI3M. 4-methoxy-indol-3-ylmethylglucosinolate; NMOI3M. n.-methoxyindol-3-ylmethylglucosinolate).DOI: http://dx.doi.org/10.7554/eLife.19466.013

![Figure 4—figure supplement 1.](https://cdn.elifesciences.org/articles/19466/elife-19466-fig4-figsupp1-v1.jpg)

**Figure 4—figure supplement 1.:** In silico expression analysis of the indole-specific glucosinolate transporter GTR3 and the broad-specificity GTR1 and GTR2 transporters.(A–B) Cell type-specific expression of GTR2 and GTR3 relative to GTR1 expression in (A) shoot and (B) root tissue of 7-day-old Arabidopsis seedlings. Data was retrieved from microarray studies of RNA bound to ribosomes that were immunoprecipitated by use of epitope-tagged ribosomal protein from seedlings (Mustroph et al., 2009). Cell type-specific expression of GTR1, GTR2 and GTR3 was inferred based on co-expression with the genes whose promoters were used for driving the ribosomal affinity tag (Mustroph et al., 2009).DOI: http://dx.doi.org/10.7554/eLife.19466.014

![Figure 4—figure supplement 2.](https://cdn.elifesciences.org/articles/19466/elife-19466-fig4-figsupp2-v1.jpg)

**Figure 4—figure supplement 2.:** In planta characterization of the indole-specific glucosinolate transporter GTR3 – aliphatic glucosinolate data.Aliphatic glucosinolate concentration of roots (A) and rosettes (B) of 3-week-old hydroponically grown A. thaliana wildtype (Col-0), gtr3, gtr1 gtr2 and gtr1 gtr2 gtr3 plants. For individual glucosinolate data see Figure 4—source data 1–2. The box is determined by the 25th and 75th percentiles. The whiskers are determined by the 5th and 95th percentiles. Median and mean are shown as line and square. Groups in subfigures are determined by one-way ANOVA followed by Tukey HSD Calculator multiple comparison post-hoc analysis (p<0.05). Data presented is one of two individual experiments, each containing 8–12 repeats (n) (see Figure 4—source data 1–2 for individual glucosinolate data points and individual n; error bars and parentheses are s.d. Post-hoc Tukey HSD Calculator multiple comparison (p<0.05). n.d. none detected. (C) Aliphatic glucosinolate concentration of rosettes and roots of 3-week-old hydroponically grown reciprocally micro-grafted wild type (wt), myb28 myb29 cyp79b2 cyp79b3 glucosinolate biosynthesis null mutant (qko) and gtr1 gtr2 gtr3 (tko). Rosettes and roots from wild type wt, qko and tko plants were reciprocally grafted using 4-day-old seedlings. The grafts are shown as the genotype of rosette and roots, respectively. Aliphatic glucosinolate content in the rosette and roots was quantified by LC-MS in 3-week-old plants. Data presented is one of two individual experiments, each containing 8–16 repeats (n) (see Figure 4—source data 3–4 for individual glucosinolate data points and individual n; error bars and parentheses are s.d. Groups in subfigures are determined by one-way ANOVA followed by Tukey HSD Calculator multiple comparison post-hoc analysis (p<0.05). nd none detected.DOI: http://dx.doi.org/10.7554/eLife.19466.015

![Figure 4—figure supplement 3.](https://cdn.elifesciences.org/articles/19466/elife-19466-fig4-figsupp3-v1.jpg)

**Figure 4—figure supplement 3.:** gtr3 T-DNA insertion mutants.Genomic location of T-DNA insertion in gtr3. Arrows indicate location of RT-PCR primers. RT-PCR analysis on RNA isolated from wild type Col-0, gtr3, gtr1 gtr2, gtr1gtr2 gtr3 using GTR3-specific primers. TUB1 (AT1G75780)-specific primers were used as internal control. See Supplementary Materials and methods for primer sequences.DOI: http://dx.doi.org/10.7554/eLife.19466.016

Based on substrate-specificity and overlapping expression of GTR1, GTR2 and GTR3 we would expect that the distribution of aliphatic glucosinolates in a gtr1 gtr2 gtr3 tko would resemble the pattern in gtr1 gtr2 dko plants. In agreement, distribution of aliphatic glucosinolates in heterografts of gtr1 gtr2 gtr3 tko with wild type and qko plants, respectively, showed similar changes in distribution pattern for aliphatic glucosinolates as previously reported for heterografts of gtr1 gtr2 dko with wild type and qko plants, respectively (Figure 4—figure supplement 2 and [Andersen et al., 2013]). Furthermore, the grafting procedure does not influence the glucosinolate distribution as evidenced by homografts of wild type and gtr1 gtr2 gtr3 tko plants showing a similar distribution of indole glucosinolates as seen for non-grafted plants (Figure 4C), and by homografts of qko plants being devoid of indole glucosinolates (Figure 4C and [Andersen et al., 2013]). Analysis of heterografted plants with no glucosinolate biosynthesis in the root showed that only small amounts of indole glucosinolates are transported from rosette to root. Similarly, it was evident from the (qko/wt) heterografts that when all three GTRs are expressed in the root, the root to rosette transport is below detection levels (Figure 4C). However, when all three GTRs are knocked out in roots, we see a dramatic increase in the rosette indole glucosinolate content (Figure 4). In combination, this suggests that GTR3 (along with GTR1 and GTR2) has a role in retaining indole glucosinolates in the root, presumably by importing indole glucosinolates into storage cells.

## Rise and evolution of glucosinolate transport specificity

From an evolutionary perspective, our findings propose two models for how substrate specificity evolved for the glucosinolate transporters. Either glucosinolate transport first arose with narrow specificity for indole glucosinolates followed by a broadening of the substrate specificity, or the reverse. To address this question and potentially determine when glucosinolate transport capability arose, we performed a phylogenetic analysis of NPF transporters from glucosinolate-producing species (

![Figure 5.](https://cdn.elifesciences.org/articles/19466/elife-19466-fig5-v1.jpg)

**Figure 5.:** (A) Selected part of Bayesian inference (MrBayes) tree (s.d. < 0.01) of GTR homologs from selected species (Full phylogenetic tree of NPFs from selected species is found as Figure 5—figure supplement 1). Green circles at nodes represent a posterior probability of 1 (maximum is 1). Values at nodes separated by a backslash represent MrBayes values below 1 in red, followed by RAxML generated bootstrap values in black (only reported when Mrbayes value is below 1). Asterix indicates that Cp17.188 lacks the highly conserved EXXE[R/K] motif involved in proton-coupling (Jørgensen et al., 2015). Subclades with green, purple and pink background denote the GTR1 subclade, GTR3 subclade and GTR-like subclade (genes that cluster with GTR homologs from C.papaya), respectively. Genes in bold were tested for glucosinolate transport in B). (B) Uptake of 4MTB and I3M by X. laevis oocytes expressing selected GTR homologs (bold) from A. thaliana, B. rapa, C. papaya, T. cacao and M. esculenta from the colored subclades and Me15G176100, which clusters outside the GTR-like subclade). Genes were expressed individually in X. laevis oocytes and transport activity was measured in the presence of 0.2 mM 4MTB (black bars) or 0.2 mM I3M (green bars) at external pH 5. Dotted line represents substrate concentration in external media. Accumulated 4MTB or I3M was quantified by LC-MS in 5 × 1 oocytes for each gene (Error bars represent ± s.d. of mean, n = 5, experiment repeated two times). (C) 4MTB (black circles)- and I3M (green circles)-induced currents in oocytes expressing GTR homologs that showed glucosinolate uptake in B). Expressing oocytes were exposed to 0.2 mM 4MTB or I3M and induced currents were measured at membrane potentials clamped between 0 mV and −180 mV in 20 mV increments at pH 5 (Error bars represent ± s.d. of mean, n = 4, experiment repeated two times). (D) Normalized 4MTB-induced currents of CpGTRL2 (Cp17.190) measured at a membrane potential of −60 mV at pH 5 plotted against increasing 4MTB concentrations. The saturation curve was fitted with a Michaelis-Menten equation represented by a solid line (Error bars represent ± s.d. of mean for data obtained from four different oocytes per experiment). Each oocyte dataset was normalized to currents elicited at 1 mM 4MTB concentration at −60 mV. The insert shows the apparent Km as a function of membrane potential.DOI: http://dx.doi.org/10.7554/eLife.19466.017

![Figure 5—figure supplement 1.](https://cdn.elifesciences.org/articles/19466/elife-19466-fig5-figsupp1-v1.jpg)

**Figure 5—figure supplement 1.:** Bayesian inference (MrBayes) tree (s.d.< 0.01) of NPF transporters from selected species. Green circles at nodes represent a posterior probability of 1 (maximum is 1). Values at nodes separated by a backslash represent MrBayes values below 1 in red, followed by RAxML generated bootstrap values in black (only reported when Mrbayes value is below 1). Scale bar indicates number of substitutions per site.DOI: http://dx.doi.org/10.7554/eLife.19466.018

![Figure 5—figure supplement 2.](https://cdn.elifesciences.org/articles/19466/elife-19466-fig5-figsupp2-v1.jpg)

**Figure 5—figure supplement 2.:** (A–D) 4MTB (black circles)- and I3M (green circles)-induced currents in oocytes expressing GTR homologs that showed glucosinolate uptake in Figure 5B. Expressing and non-expressing oocytes were exposed to 0.2 mM 4MTB or I3M and induced currents were measured at membrane potentials between 0 mV and −180 mV in 20 mV increments at pH5 (Error bars represent ± s.d. of mean for data obtained from four different oocytes per experiment, experiment repeated two times).DOI: http://dx.doi.org/10.7554/eLife.19466.019

![Figure 5—figure supplement 3.](https://cdn.elifesciences.org/articles/19466/elife-19466-fig5-figsupp3-v1.jpg)

**Figure 5—figure supplement 3.:** B. rapa, C. papaya, T. cacao and cassava in X. laevis oocytes.YFP fluorescence in yellow (top) and the plasmamembrane-staining dye FM4-64fx in blue (bottom). Shown are representative images of at least three oocytes.DOI: http://dx.doi.org/10.7554/eLife.19466.020

To track the rise and evolution of glucosinolate substrate specificity we tested a range of transporters for glucosinolate transport activity via expression in X. laevis oocytes. All transporters described below were codon optimized for expression in X. laevis oocytes and tested for transport activity in their native form (i.e. without tag). Additionally, we fused each gene to YFP in the C-terminus and confirmed its expression and localization to the plasmamembrane via confocal microscopy (Figure 5—figure supplement 2). In the following, lack of transport can therefore likely be attributed to lack of activity rather than lack of expression. Within the GTR1 and GTR3 subclades, we tested one of the respective orthologs from B. rapa and showed a strong preference for I3M by the tested BrGTR3 ortholog (BrH02396), whereas the tested BrGTR1 ortholog (BrF01711) transported 4MTB and I3M with similar efficiency (Figure 5B). Thus, the high preference for indole glucosinolates appears typical for GTR3 orthologs within the Brassicales-specific GTR3 subclade. Oocytes expressing GTR-like transporters from C. papaya over-accumulate both 4MTB and I3M relative to the assay media concentration and we named them CARICA PAPAYA Glucosinolate Transporter LIKE-1 (CpGTRL1) and −2 (CpGTRL2), respectively (Figure 5B). The ability of CpGTRL1 and −2 to transport both 4MTB and I3M is surprising as indole glucosinolates are found in A. thaliana and B. rapa, but not in C. papaya (Mithen et al., 2010). Interestingly, CpGTRL2 from C. papaya transported 4MTB with a km of 85 ± 12 µM at −60 mV (Figure 5D). This indicates that the high affinity of GTRs towards glucosinolates evolved before the diversification of the Brassicaceae and Caricaceae. Moreover, the data imply that the common ancestor of the GTR transporters was originally broad-specific and that GTR3 lost the ability to over-accumulate aliphatic glucosinolates after the divergence of C. papaya and the ancestor of Arabidopsis and Brassica (~72.1 MYA, median of 8 studies [Hedges et al., 2006]). This suggests that preference for indole glucosinolates evolved as a subfunctionalization of ancestral, broad-specific glucosinolate transporters.

To track the rise of transport capacity towards glucosinolates, we tested for glucosinolate uptake in the closest GTR homologs from cassava, which do not produce glucosinolates but produces the evolutionary related and ancestral cyanogenic glucosides (McMohan et al., 1995). As a control, we included GTR homologs from cacao, which produces neither compound class (Bjerg et al., 1987; Seigler, 2005). Oocytes expressing Me14G074000 from cassava over-accumulated both 4MTB and I3M relative to external media, while the expressed GTR homolog from cacao did not transport any glucosinolates (Figure 5B, Figure 5—figure supplement 3 and Figure 5—figure supplement 2). Hence, as cassava does not synthesize glucosinolates, the ability to transport glucosinolate appears to have arisen in the NPF family prior to the evolution of the glucosinolate biosynthetic pathway. Furthermore, the characterization of this potentially ancestral form of the glucosinolate transporters support that they first evolved with broad specificity towards aliphatic and indole glucosinolates.

## Co-evolution of transporter substrate specificity and substrate biosynthesis

Glucosinolates and cyanogenic glucosides are structurally distinct (

![Figure 6.](https://cdn.elifesciences.org/articles/19466/elife-19466-fig6-v1.jpg)

**Figure 6.:** (A) Uptake of prunasin and linamarin in X. laevis oocytes expressing GTR homologs from A. thaliana, B. rapa, C. papaya, T. cacao and M.esculenta. Genes were expressed individually in X. laevis oocytes and transport activity was measured in the presence of 0.2 mM prunasin (red bars) or linamarin (blue bars). Accumulated prunasin or linamarin were quantified by LC-MS in 5 × 1 oocytes for each gene (Error bars represent ±s.d. of mean for data obtained from five different oocytes per experiment, experiment repeated two times). Dotted line represents media substrate concentration. None of the genes accumulated linamarin to detectable levels. (B) Bayesian inference tree (MrBayes tree) showing selected part of M. esculenta NPF phylogenetic tree (closest homologs of Me14G074000). Green circles at nodes represent a posterior probability of 1 (maximum is 1). Values at nodes separated by a backslash represent MrBayes values below 1 in red, followed by RAxML generated bootstrap values in black (only reported when Mrbayes value is below 1). Scale bar indicates number of substitutions per site. Subclades coloured green, pink and purple mark genes that cluster with GTRs, NPF2.12/13 and NPF2.8, respectively, in Figure 5—figure supplement 1. Full phylogenetic tree of M.esculenta NPFs is found as Figure 6—figure supplement 2. Genes in bold were assayed for prunasin, linamarin, 4MTB and I3M uptake. (C) Accumulation of prunasin and linamarin in X.laevis oocytes expressing closest homologs of Me14G074000 from M. esculenta. Genes were expressed individually in X. laevis oocytes and transport activity was measured in the presence of 0.2 mM prunasin (red bars) or 0.2 mM linamarin (blue bars). Accumulated prunasin or linamarin was quantified by LC-MS in 5 × 1 oocytes for each gene (Error bars represent ± s.d. of mean for data obtained from five different oocytes per experiment, experiment repeated two times). Only MeCGTR1 accumulated linamarin to detectable levels. Dotted line represents substrate concentration in external media. (D) Prunasin (red circles)- and linamarin (blue circles)-induced currents in oocytes expressing Me14G74000, MeCGTR1, Me15G176100 and non-expressing oocytes, respectively. Expressing and non-expressing oocytes were exposed to 0.2 mM prunasin or 0.2 mM linamarin and induced currents were measured at membrane potentials between 0 mV and −180 mV in 20 mV increments at pH5. (E–F) Normalized prunasin (E) or linamarin (F) induced currents elicited in MeCGTR1-expressing oocytes measured at a membrane potential of −60 mV and pH 5 plotted against increasing prunasin (E) or linamarin (F) concentrations. The saturation curve was fitted with a Michaelis-Menten equation represented by a solid line (error bars are s.d.; n = 4). Each oocyte dataset was normalized to currents elicited at 0.8 mM prunasin (E) or 1 mM linamarin (F) concentration at −60 mV. The insert shows the apparent Km as a function of membrane potential (error bars are s.d.; n = 3–4 oocytes).DOI: http://dx.doi.org/10.7554/eLife.19466.021

![Figure 6—figure supplement 1.](https://cdn.elifesciences.org/articles/19466/elife-19466-fig6-figsupp1-v1.jpg)

**Figure 6—figure supplement 1.:** Bayesian inference (MrBayes) tree (s.d.<0.01) of NPF transporters from Manihot esculenta (cassava). Green circles at nodes represent a posterior probability of 1 (maximum is 1). Values at nodes separated by a backslash represent MrBayes values below 1 in red, followed by RAxML generated bootstrap values in black (only reported when Mrbayes value is below 1). Scale bar indicates number of substitutions per site.DOI: http://dx.doi.org/10.7554/eLife.19466.022

![Figure 6—figure supplement 2.](https://cdn.elifesciences.org/articles/19466/elife-19466-fig6-figsupp2-v1.jpg)

**Figure 6—figure supplement 2.:** X. laevis oocytes expressing close M. esculenta homologs of Me14G074000.Genes were expressed individually in X. laevis oocytes and transport activity was measured in the presence of 0.2 mM 4MTB (black bars) or 0.2 mM I3M (green bars). Accumulated 4MTB or I3M was quantified by LC-MS in 5 × 1 oocytes for each gene (Error bars represent ± s.d. of mean for data obtained from five different oocytes per experiment, experiment repeated two times). Dotted line represents media substrate concentration.DOI: http://dx.doi.org/10.7554/eLife.19466.023

![Figure 6—figure supplement 3.](https://cdn.elifesciences.org/articles/19466/elife-19466-fig6-figsupp3-v1.jpg)

**Figure 6—figure supplement 3.:** X. laevis oocytes.YFP fluorescence in yellow (top) and the plasmamembrane-staining dye FM4-64fx in blue (bottom). Shown are representative images of at least three oocytes.DOI: http://dx.doi.org/10.7554/eLife.19466.024

If Me14G074000 represents such a ‘transition’ transporter between cyanogenic glucoside-specific to glucosinolate-specific transporter, we hypothesized that the genome of the cyanogenic glucoside-producing cassava also encodes a GTR-like NPF transporter that is specific for cyanogenic glucosides. We tested this hypothesis by measuring transport activity of the six closest homologs of Me14G074000 from cassava (Figure 6B–C and Figure 6—figure supplement 2). The closest homolog, Me14G074100, appears truncated (data not shown) with only five transmembrane-spanning domains but was nevertheless included in our analysis. All six transporters were tested for transport activity in their native form. Additionally, we fused YFP to the C-terminus of each gene to validate expression. Native Me14G074100, Me01G191900, Me09G097200, and Me17G124600 did not result in uptake of 4MTB, I3M, prunasin or linamarin. Among the YFP-tagged transporters, only Me14G074100 and Me09G097200 did not express in the oocytes (Figure 6—figure supplement 1), and hence we cannot conclude whether these two transporters are inactive. Uptake of prunasin was detected in oocytes expressing Me15G176100 at levels similar to or slightly lower than the suggested ‘transition’ transporter (Me14G074000) (Figure 6C). In contrast, Me15G180400 strongly over-accumulated prunasin and linamarin to more than 12 and 8 times the media level (Figure 6C) while uptake of both aliphatic and indole glucosinolates by this transporter was negligible (Figure 6—figure supplement 3). Thus, Me15G180400 is specific towards cyanogenic glucosides. We named Me15G180400 MANIHOT ESCULENTA CYANOGENIC GLUCOSIDE TRANSPORTER-1 (MeCGTR1) and to the best of our knowledge, it represents the first identification of an importer of cyanogenic glucosides. TEVC electrophysiology assays showed that prunasin and linamarin induce negative currents in MeCGTR1-expressing oocytes (Figure 6D). Kinetic analysis of MeCGTR1 showed that this protein transports prunasin and linamarin with a Km of 80 ± 7 µM and 262 ± 15 µM, respectively, measured at a membrane potential clamped to −60 mV (Figure 6E–F). This indicates that MeCGTR1 is a high-affinity, cyanogenic glucoside-specific transporter and shows that it is capable of over-accumulating against a concentration gradient. The existence of MeCGTR1 supports our hypothesis that the dual-specific Me14G074000 represents a ‘transition’ transporter evolutionarily positioned between cyanogenic glucoside-specific (MeCGTR1) and glucosinolate-specific transporters (GTR1–3 and GTRL1–2). The identification and close phylogenetic relationship of glucosinolate-specific, dual-specific and cyanogenic glucoside-specific transporters within the NPF supports that glucosinolate transporters evolved from cyanogenic glucoside NPF transporters.

## Is evolution of new substrate specificity in the NPF accompanied by changes in transporter electrogenicity?

Most characterized members of the SLC15/PepT/POT/NPF family are symporters that function by an electrogenic proton-coupled transport mechanism (Nour-Eldin et al., 2012; Parker et al., 2014; Fei et al., 1999; Chen et al., 1999; Steel et al., 1997; Mackenzie et al., 1996; Fei et al., 1994; Doki et al., 2013; Solcan et al., 2012; Chiang et al., 2004), that is, symport of protons generates a net influx of positive charge that can be measured as a negative current by TEVC. Characterization of the transporters identified in this study by both LCMS- and TEVC-based transport assays enabled us to investigate the evolution of electrogenicity of glucosinolate and cyanogenic glucoside transporters. Previously, we showed that AtGTR1 and −2 mediated transport of 4MTB induces negative currents as a result of net inward movement of protons during transport (Nour-Eldin et al., 2012). In this study, we show that negative currents are also induced by both AtGTR1 and −2 when exposed to I3M (Figure 2B and Figure 2—figure supplement 2). This indicates that AtGTR1 and −2 transport 4MTB and I3M – two negatively charged glucosinolates with different amino acid side chains- via a similar electrogenic transport mechanism. Similarly, the tested GTR1 ortholog from B. rapa (BrGTR1) also induced negative currents when exposed to 4MTB or I3M (Figure 5C). In comparison, AtGTR3 and the GTR3 ortholog from B. rapa (BrGTR3) only induced currents when exposed to I3M (Figure 5C). No detectable currents were induced by 4MTB in neither AtGTR3 nor BrGTR3 (Figure 2A–B and Figure 5C). Thus, it appears that electrogenic transport of - and the ability to upconcentrate - 4MTB is a property that distinguishes the GTR1 clade from the GTR3 clade. Similarly, exposure to cyanogenic glucosides did not induce currents in the putative transition transporter, Me14G074000; (Figure 6D). In comparison, MeCGTR1 induced negative currents when exposed to the non-charged prunasin and linamarin (Figure 6D). This suggests that transport of these two cyanogenic glucosides by MeCGTR1 is coupled to a net influx of cationic species and that transport of cyanogenic glucosides by MeCGTR1 and Me14G074000 appears to differ with respect to electrogenicity.

Identification of the phylogenetically more basal glucosinolate transporters in C. papaya and cassava allowed us to investigate when electrogenic glucosinolate transport may have evolved. From the GTR-like clade, the glucosinolate transporting CpGTRL1 and CpGTRL2 induced currents when exposed to 4MTB or I3M (Figure 5C) whereas Me14G074000 from cassava did not induce detectable currents (Figure 5—figure supplement 3C). All three transporters were able to upconcentrate both glucosinolates against their respective concentration gradient (Figure 5B). Thus, our data suggest that the glucosinolate transport mechanism first arose as a non-electrogenic mechanism that later evolved to become electrogenic. Moreover, electrogenic transport appears not to be a prerequisite for the ability to over-accumulate glucosinolates. Previously, we showed that negative currents induced by AtGTR1 and AtGTR2 when exposed to the negatively charged glucosinolates, reflect a glucosinolate to proton stoichiometry of 1 ≤ 2 (Nour-Eldin et al., 2012). Substrate-dependent variation in transport coupling stoichiometry between substrate and protons has been shown to depend on the length of the oligo-peptide substrate for PepTSo (Parker et al., 2014). The non-electrogenic transport by Me14G074000 could indicate a different proton to glucosinolate stoichiometry compared to that of the A. thaliana orthologs. For example, the lack of detectable currents may be caused by an equal amount of negative and positive charges moving across the membrane during the transport cycle. This would suggest that changes in transporter substrate specificity for a given substrate are accompanied by changes in transporter electrogenicity. However, we cannot exclude that the lack of currents for Me14G074000 is caused by currents below detection limits or that co-transport of other ions may be ´masking´ the coupled transport by Me14G074000. Nevertheless, the absence of induced currents by Me14G074000 indicates that transport of glucosinolates became electrogenic after the divergence of cassava and C. papaya.

We believe that these genes provide a suitable model system for future studies that will investigate if the observed changes in transporter electrogenicities are caused by changes in coupling stoichiometry. This will lead to a mechanistic understanding of how substrate specificity and coupling stoichiometries co-evolve within the NPF family.

## A model for an evolutionary path of transporter substrate specificity

Based on our findings we propose a model for the evolutionary path of glucosinolate transporter substrate specificity in the NPF family (

![Figure 7.](https://cdn.elifesciences.org/articles/19466/elife-19466-fig7-v1.jpg)

**Figure 7.:** We propose that diversification of an ancestral high-affinity cyanogenic glucoside transporter (exemplified by MeCGTR1) lead to a dual-specificity transporter capable of transporting both cyanogenic glucosides and glucosinolates (exemplified by Me14G074000). With the emergence of glucosinolate biosynthesis, high-affinity, broad-specific glucosinolate transporters evolved (exemplified by CpGTRL1/2 and At/BrGTR1), which then further specialized to preferentially transport indole glucosinolates when indole biosynthesis emerged. Bidirectional arrow indicates an alternative model where high-affinity cyanogenic glucoside transporters emerged from the dual-specificity transporter (exemplified by Me14g074000). A. thaliana and C. papaya or M. esculenta diversified 108 MYA (median, 26 studies) or 72.1 MYA (median, 8 studies), respectively (Hedges et al., 2006). Branch points represent likely duplication events that led to new transporter substrate specificities. Striped pattern indicates a transporter that is unable to over-accumulate substrate compared to external media.DOI: http://dx.doi.org/10.7554/eLife.19466.025

## Structural perspectives on glucosinolate and cyanogenic glucoside transporter substrate specificity

The large plant NPF family is homologous to the SLC15/PepT/PTR/POT families in bacteria and animals (

![Figure 8.](https://cdn.elifesciences.org/articles/19466/elife-19466-fig8-v1.jpg)

**Figure 8.:** Homology modeling of GTR1, GTR3, Me14g74000 and MecGTR1 was carried out using NPF6.3 as template (see Materials and methods for details). Residues P1–13 are shown and color-coded according to legend. In blue mesh is the 3V determined central cavity (Voss and Gerstein, 2010). The inserts show P4, P5 and P6 (see text for discussion).DOI: http://dx.doi.org/10.7554/eLife.19466.026

![Figure 8—figure supplement 1.](https://cdn.elifesciences.org/articles/19466/elife-19466-fig8-figsupp1-v1.jpg)

**Figure 8—figure supplement 1.:** Amino acid alignment of AtGTR1, AtGTR2, AtGTR3, CpGTRL1, CpGTRL2, Me14g74000 and MeCGTR1 with NPF6.3, PepTSo, PepTSt, PepT1 (human) and PepTGk using MUSCLE (Edgar, 2004) and visualized with JalView (Waterhouse et al., 2009). Residues involved in nitrate and peptide binding are highlighted by a star and numbered P1-P15 (Doki et al., 2013; Solcan et al., 2012; Parker and Newstead, 2014; Sun et al., 2014; Newstead, 2011; Lyons et al., 2014). Helixes are indicated above the alignment and based on NPF6.3 annotation.DOI: http://dx.doi.org/10.7554/eLife.19466.027

## Conclusion and perspectives

With the dawning of cellular life, primitive membrane structures leading to today’s complex phospholipid membranes necessitated membrane proteins to facilitate movement of structurally diverse compounds across cellular membranes (Mansy et al., 2008). Towards understanding the evolutionary paths that lead to new transporter substrate specificities, we show that before a substrate emerges, transporter specificity for the substrate may be present in transporters of chemically similar, more ancient substrates. As new substrates emerges (in this case glucosinolates), gene duplications allows such multifunctional transporters to diversify through subfunctionalization into transporters with greater specificity for the new substrate.

Thus, our findings support one model (Bridgham et al., 2006) to the problem posed by the classical evolution model – about how a new function (here transporter substrate specificity) can be selected for unless the substrate is there. We propose that redundant ancestral transporters created by gene duplication remain active due to a multifunctional specificity. When the new substrate emerges these ancestral transporters can be recruited and evolve into transporters with greater specificity for the new compound. Moreover, from a mechanistic perspective, our data suggests that the evolution of new substrate specificities in coupled secondary transporters is accompanied by changes in the electrogenic properties of the transport mechanism. Unraveling the structural determinants underpinning stoichiometry and binding of substrate constitutes a new frontier for understanding the birth and development of new transporter substrate specificities at the molecular level. This not only applies to the universal NPF transporters, including their drug-delivering mammalian counterparts (Brandsch, 2013), but for transporters in general. From an agro-biotech perspective, the identification of a cyanogenic glucoside transporter with high apparent affinity supports a prominent role for NPF transporters in specialized metabolism (Nour-Eldin et al., 2012; Nour-Eldin and Halkier, 2013) and opens new possibilities for controlling cyanogenic glucoside content in edible parts of crops such as bitter almond (Dicenta et al., 2002), barley (Erb et al., 1979) and cassava (McMohan et al., 1995) through transport engineering strategies (Nour-Eldin and Halkier, 2013).

## Materials and methods

## Gene names and IDs

The genes cloned and tested in this study are named as follows: (BrH02396), BrF01711, CpGTRL2 (Phytozome ID: evm.TU.supercontig_17.190), CpGTRL1 (Phytozome ID: evm.model.supercontig_17.189), Cp17.188 (Phytozome ID: evm.model.supercontig_17.188), Tc1EG013796 (Phytozome ID: Thecc1EG013796), Me14G074000 (Phytozome ID: Manes.14G074000, cassava4.1_004026m), Me15G176100 (Phytozome ID: Manes.15G176100, cassava4.1_004213m), Me09G097200 (Phytozome ID: Manes.09G097200, cassava4.1_034015m), Me01G191900 (Phytozome ID: Manes.01G191900, cassava4.1_025742m), Me14G074100 (Phytozome ID: Manes.14G074100 cassava4.1_034466m), MeCGTR1 (Phytozome ID: Manes.15G180400, cassava4.1_004125m) and Me17G124600 (Phytozome ID: Manes.17G124600, cassava4.1_029616m).

## Cloning of synthesized genes into Xenopus expression vector

All coding sequences were codon optimized for expression in X. laevis (NCBI Taxon: 8355) oocytes and synthesized as linear uracil containing DNA fragments (uStrings) by ThermoFisher Scientific Geneart. Each coding sequence was surrounded by the 8 bp USER tails that enable insertion into the USER compatible X. laevis expression vector pNB1u (Geu-Flores et al., 2007; Nour-Eldin et al., 2006). Each fragment contained a uracil at the appropriate location in each USER tail. The uracil was incorporated during synthesis. Thus, uStrings are mixed directly with the digested pNB1u vector without prior PCR amplification with uracil containing primers. Briefly, each uString was diluted to 100 ng/ul in H20. The USER-compatible pNB1u X. laevis oocyte expression vector was digested with PacI/Nt.BbvCI overnight, gel purified and diluted to a concentration of ~50 ng/ul (as previously described [Nour-Eldin et al., 2006; MacAulay et al., 2001]). For the USER reaction, 100 ng uStrings was mixed with 50 ng digested pNB1u, 1 unit USER enzyme (NEB-M5505S), 2 µl 5xPCR reaction buffer and 5 µl H20. The reaction was incubated at 37°C for 25 min, followed by 25 min at room temperature. The reaction mixture was used to transform chemically competent E. coli cells, plated on carbinicilin-containing LB plates. Selected colonies were grown overnight and extracted plasmids sequenced. All uStrings were inserted successfully into the pNB1u vector and out of the 13 genes synthesized and cloned, we had to sequence a second colony for only one of the genes. The fidelity and efficiency of cloning uStrings directly by USER cloning is satisfactory.

## Fluorophore tagging of transporters

For fluorophore tagging, coding sequences were PCR amplified from the expression constructs without the stop codon using uracil containing primers (see Materials and methods list of USER primers). The PCR fragments were USER cloned (as described previously [Nour-Eldin et al., 2006] into an oocyte expression vector (pNB1u variant, pLIFE22 [Jørgensen et al., 2015]) that translationally fuses the inserted coding sequence to a C-terminal YFP fluorophore, which is contained in the vector.

## List of USER primers for fluorophore-tagging of transporters. USER-overhang is in bold and a vector-specific double cysteine is underlined

Primer Name Sequence ForwardCpGTRL1GGCTTAAUATGGAAAGGGCTGCCATGGCReverse no stopCpGTRL1GGTTTAAUCCTCTGGACTCTTCGTTCACTTCGForwardThecc1EG013796GGCTTAAUATGGAAAAGAACGACAAAGAAGCCReverse no stopThecc1EG013796GGTTTAAUCCAACGAAGCTCTTGTCGCTCTForwardBrGTR3GGCTTAAUATGGAAGTGGAAAAGACCCAGGAAReverse no stopBrGTR3GGTTTAAUCCAACGGACACCTTGTCGAACTCGForwardMe15g176100GGCTTAAUATGGAAGATAAGGAAGAGAAGTCCReverse no stopMe15g176100GGTTTAAUCCCACAAGGTGTTTCTGAGACTGCTGForwardMe14g074100GGCTTAAUATGGAAGTGGAACAGAGCGTGGReverse no stopMe14g074100GGTTTAAUCCCTGCACCACTTCCAGAATCTTTGTForwardMe15g18400/MeCGTR1GGCTTAAUATGGAAAACGGCAACGATCACGReverse no stopMe15g18400/MeCGTR1GGTTTAAUCCCACGTGGTGCTTCACGCTAGForwardMe17g124600GGCTTAAUATGGAAAACAAAAAGCAGGAAACAReverse no stopMe17g124600GGTTTAAUCCCAGGTCGCTTGGGATGAAAGACForwardMe09g097200GGCTTAAUATGGAAAACATGATTATCGCCAGCReverse no stopMe09g097200GGTTTAAUCCGGCTGTAGCCTTCAGTTCCAGAForwardBrGTR1GGCTTAAUATGGAAAGAAAGCCCTTCGAGGTReverse no stopBrGTR1GGTTTAAUCCAACGCTGTTCTTAGCCTGCTTForwardMe14g074000GGCTTAAUATGGCCACAGGCGAGACAATCReverse no stopMe14g074000GGTTTAAUCCGGCCTTGATTGGCTTAACCTGCForwardCpGTRL2GGCTTAAUATGGAAATGGACGGCAAAGAGCReverse no stopCpGTRL2GGTTTAAUCCAACGTGGATGTTCTGCTTTTTCTTForwardCp17.188GGCTTAAUATGGCCTTCCTGCTGACCGReverse no stopCp17.188GGTTTAAUCCGATATCGCTCTGCTTGGTGCTForwardAtGTR1GGCTTAAUATGAAGAGCAGAGTCATTReverse no stopAtGTR1GGTTTAAUCCGACAGAGTTCTTGTCForwardAtGTR3GGCTTAAUATGGAGGTTGAGAAGACAGAGAAGReverse no stopAtGTR3GGTTTAAUCCCACTGACACCTTATCAAACTCAGC

## Oocyte bioimaging

Oocyte bioimaging was performed essentially as previously described (Geiger et al., 2011), with the addition that oocytes expressing YFP-tagged transporters were mounted on a glass slide and a Kulori (90 mM NaCl, 1 mM KCl, 1 mM MgCl2, 10 mM MES adjusted to pH7.4) solution with 20 µM FM4-64fx was added 1 min prior to bioimaging by confocal scanning microscopy using a SPX5-X Point-scanning Confocal from Leica Microsystems.

## Oocyte preparation and cRNA injection

X. laevis oocytes (stages V-VI) were purchased as defolliculated oocytes (stages V-VI) from Ecocyte Biosciences (Germany). Injection of 50 nl cRNA (500 ng/µl) into X. laevis oocytes was done using a Drummond NANOJECT II (Drummond scientific company, Bromall Pennsylvania). Oocytes were incubated for 3 days at 17°C in Kulori (90 mM NaCl, 1 mM KCl, 1 mM MgCl2, 10 mM MES) pH7.4 prior to assaying.

## Phylogenetic analysis - Dataset assembly

NPF homologs (also called SLC15/PepT/PTR/POT [Léran et al., 2014; Daniel et al., 2006]) from Arabidopsis thaliana(At), Brassica rapa (Br), Carica papaya (Cp), Theobroma cacao (Tc), Manihot esculenta (Me), Glycine max (Gm), Gossypium raimondii (Gr), Medicago truncatula (Mt) and Solanum lycopersicum (Sl) were retrieved from phytozome (http://www.phytozome.net) by searching for sequences classified as oligopeptide transporters (PFAM:PF00854 and Panther: PTHR11654). To remove pseudogenes, we predicted the number of transmembrane helices using TMHMM server V. 2.0 (Sonnhammer et al., 1998) and removed sequences with <6 transmembrane helices and fewer than 300 amino acids. Genes were renamed according to the following guidelines. evm.model.supercontig_139.55 from C. papaya, was renamed to ‘Cp139.55’. Solyc10g024490.1 from S. lycopersicum was renamed to Sl10g024490.1. Thecc1EG035998 from T. cacao was renamed to Tc1EG035998. Glyma.18G097800 from G. max was renamed to Gm18G097800. Brara.C02073 from B. rapa was renamed to BrC02073. Medtr4g107510 from M. truncatula was renamed to Mt4g107510. Manes.16G072300 from M. esculenta was renamed to Me16G072300. Gorai.012G121800 from G. raimondii was renamed to Gr012G121800.

## Phylogenetic analysis - Alignment and phylogenetic analysis

Sequences were aligned using MUSCLE (Edgar, 2004) with a gap open penalty of −2.9, gap extend of 0 and hydrophobicity multiplier of 1.2. Poorly aligned regions were trimmed manually. Prottest v3.4.2 (Darriba et al., 2011) was used with final multiple sequence alignments to identify the appropriate LG-based phylogenetic models to use for subsequent work. The best fit (for phylogenies in Figure 1A, Figure 1—figure supplement 1 and Figure 6—figure supplement 2) was LG+I+G+F that use a general amino acid replacement matrix (Le and Gascuel, 2008) with a proportion of invariable sites (+I) (Reeves, 1992), a gamma distribution for modelling the rate heterogeneity (+G) (Yang, 1993), and empirical amino acid frequencies (+F) (Cao et al., 1994). The best fit (for phylogenies in Figure 5A, Figure 6B and Figure 5—figure supplement 1) was LG+G+F. Bayesian inference trees were calculated using MrBayes 3.2.6 (Huelsenbeck and Ronquist, 2001) until convergence was reached (‘average standard deviation of split frequencies' <0.01). The temperature heating parameter was set to 0.05 (temp = 0.05) to increase the chain swap acceptance rates, thereby reducing the chances of Markov chains to get stuck at local high-probability peaks. Burn-in was set to 25% (burninfrac = 0.25) and the number of Markov chains was set to 8 (nchains = 8). Maximum likelihood trees were produced with RAxML 8.2.3 using the LG PROTGAMMA model and 500 bootstrap replicates (Stamatakis, 2014). RAxML bootstrap values were portrayed on the MrBayes generated consensus tree. NRT1.1 from Chlamydomonas reinhardtii (Phytozome ID: Cre04.g224700) was used as the out-group. All analyses were run in MPI via the CIPRES SCIENCE GATEWAY (Miller et al., 2011) at the San Diego Supercomputer Center (SDSC). Trees were visualized in figtree (http://tree.bio.ed.ac.uk/software/figtree/) and annotated with Adobe Illustrator.

## Definition of biological versus technical replicates

‘Biological replicates’ denote replicated measurements using different biological cases, whereas ‘technical replicates’ use the same biological cases.

## Estimation of sample size

Through pilot experiments average variation between biological replicates have been determined. Sample sizes for this study were decided upon as the best compromise between average power and experimental constraints.

## Glucosinolate and cyanogenic glucoside uptake assays

X. laevis uptake assays were carried out as follows: Oocytes were preincubated in Kulori pH 5 for 5 min, transferred to Kulori pH five with substrate for 60 min incubation, followed by four washes and transferred to Eppendorf tubes (one oocyte per tube). Excess washing buffer was removed and oocytes were busted in 50 μl of 50% MeOH (with sinigrin as internal standard) and the homogenate was left in the freezer for 2 hr to precipitate proteins. This was followed by centrifugation at 20,000 x g for 15 min to pellet remaining proteins. The supernatant was transferred to new tubes and diluted with 60 μl H2O. The diluted samples were filtered through a 0.45 μm PVDF based filter plate (MSHVN4550, Merck Millipore) and subsequently analyzed by analytical Liquid Chromatography – Mass Spectrometry. 4-methylsulfinylbutyl glucosinolate (4MTB) and 3-indolylmethylglucosinolate (I3M) were obtained from C2 Bioengineering (http://www.glucosinolates.com/) and CFM Oskar Tropitzsch GmbH, Marktredwitz (http://www.cfmot.de/), respectively. Cyanogenic glucoside prunasin was synthesized by MSM as previously described (Møller et al., 2016). Cyanogenic glucoside linamarin was purchased from Santa cruz biotechnology.

## Desulfo glucosinolate analysis of X. laevis oocytes by LC-MS

ESI-LC-MS analysis of desulfo glucosinolates from X. laevis uptake assays were performed as described before (Nour-Eldin et al., 2012).

## Intact glucosinolate analysis of X. laevis oocytes by LC-MS

Extracts from uptake assays (see above) were directly analyzed by LC-MS/MS. Chromatography was performed on an Advance UHPLC system (Bruker, Bremen, Germany). Separation was achieved on a Kinetex 1.7u XB-C18 column (100 × 2.1 mm, 1.7 μm, 100 Å, Phenomenex, Torrance, CA, USA). Formic acid (0.05%) in water and acetonitrile (supplied with 0.05% formic acid) were employed as mobile phases A and B respectively. The elution profile was: 0–0.2 min, 2% B; 0.2–1.8 min, 2–30% B; 1.8–2.5 min 30–100% B, 2.5–2.8 min 100% B; 2.8–2.9 min 100–2% B and 2.9–4.0 min 2% B. The mobile phase flow rate was 400 μl min−1.The column temperature was maintained at 40°C. The liquid chromatography was coupled to an EVOQ EliteTripleQuad mass spectrometer (Bruker, Bremen, Germany) equipped with an electrospray ion source (ESI) operated in combined positive and negative ionization mode. The instrument parameters were optimized by infusion experiments with pure standards. The ion spray voltage was maintained at +5000 V or −4000 V for cyanogenic glucoside and glucosinolate analysis, respectively. Cone temperature was set to 300°C and cone gas to 20 psi. Heated probe temperature was set to 180°C and probe gas flow to 50 psi. Nebulizing gas was set to 60 psi and collision gas to 1.6 mTorr. Nitrogen was used as probe and nebulizing gas and argon as collision gas. Active exhaust was constantly on. Multiple reaction monitoring (MRM) was used to monitor analyte parent ion → product ion transitions: MRM transitions were chosen based on direct infusion experiments. Detailed values for mass transitions is found in Materials and methods list of primers.

MRM transitions for intact glucosinolates and cyanogenic glucosides determined by LC-MS/MS QQuantifier ion used for quantification of the compounds. Additional MRM transitions were used for compound identification. IS = internal Standard.

Compound Q1 Q3 CE [eV] Internal standard Response factor SIN (Sinigrin. 2-propenyl-GLS)= IS358.097.0Q22n.a.n.a.358.075.030358.0259.0204MTB420.097.0Q23Sinigrin0.99420.075.030420.0259.023I3M447.197.0Q10Sinigrin13.34447.1259.010447.1205.010Linamarin248.285.2Q−15 Sinigrin163.9248.297.319 248.2163.1−5Prunasin296.1163.1Q−4Sinigrin97.7296.185.2−17 296.197.3−21

Both Q1 and Q3 quadrupoles were maintained at unit resolution. Bruker MS Workstation software (Version 8.2, Bruker, Bremen, Germany) was used for data acquisition and processing.

Linearity in ionization efficiencies was verified by analyzing dilution series of standard mixtures. Quantification of all compounds was achieved by use of sinigrin as internal standard.

## Calculating up concentration of substrate inside oocytes

The concentration of imported substrate was calculated based on previous reports determining the water content of oocytes to be ~70% of total volume (de Laat et al., 1974) and an oocyte diameter of 1.5 mm. Assuming this, the oocyte cytosolic volume was estimated to be 1 μl allowing us to calculate the up-concentration of substrate.

## Nitrate uptake assays and analysis by ICPMS

Nitrate uptake assays were carried out as follows: Oocytes were preincubated in Kulori pH 5 for 5 min, transferred to Kulori pH 5 with 15N-labelled KNO3 (Sigma Aldrich, 335134) at the indicated concentration for 60 min. Subsequently, oocytes were washed 4 times in H2O and transferred to tin capsules prior to stable isotope analysis by IRMS (Isotope Ratio Mass Spectrometry). Stable isotope ratio analysis of nitrogen were conducted as described by Laursen et al. (2013). In brief, analysis were conducted using a Europa Scientific ANCA-SL Elemental Analyser coupled to a Europa Scientific 20–20 Tracermass mass spectrometer (Sercon Ltd., Crewe, UK). Quality control (accuracy and precision) was performed by analysis of standards and certified reference materials from the International Atomic Energy Agency, IAEA, Vienna, Austria and Iso-Analytical Limited, IA, Crewe, UK.

## Electrophysiological measurements

All measurements were performed with a Two Electrode Voltage-Clamp system (TEVC) composed of an NPI TEC-03X amplifier (NPI electronic GmbH, Germany) connected to a PC with pCLAMP10 software (Molecular devices, USA) via an Axon Digidata 1440a digitizer (Molecular devices, USA). Oocytes were placed in the recording chamber and perfused with a standard Kulori-based solution (90 mM NaCl, 1 mM KCl, 1 mM CaCl2, 1 mM MgCl2, 1 mM LaCl3 and 10 mM MES pH 5). TEVC data was analysed in excel after extraction from pCLAMP10 software as a Microsoft Excel compatible worksheet. Substrate-dependent currents were calculated by subtracting currents before addition of substrate from currents after addition of substrate. Visualization and curve fitting to the Michaelis-Menten equation (Equation 1) to calculate the apparent Km value was done using SigmaPlot version 12.5/13.0 (Systat software, USA).

Equation 1 - Michaelis-Menten equation. I is the current, Imax is the maximal current achieved by the transporter at saturating concentrations of substrate.(1)I=Imax*[ substrate ][ substrate ]+Km

SigmaPlot version 12.3 (Systat software, USA) was used for statistical analysis and data plotting.

## Plant materials and growth conditions

Arabidopsis thaliana ecotype Columbia-0 (Col-0) (NCBI Taxon: 3702) lines and three insertion mutants gtr1 (SAIL_801_G03), gtr2 (SAIL_20_B07) and nrt1.9–2/gtr3 (GK-099B01) were obtained from NASC. To construct double and triple mutants, gtr3 homozygous were crossed to a previously characterized and published gtr1 gtr2 dko (Nour-Eldin et al., 2012). F1 progeny of those crosses were all phenotypically normal. The resulting F2 progeny (160 plants) were screened by PCR, and homozygous mutants, (gtr1 gtr3, gtr2, gtr3) were obtained. Seeds from self-pollination of gtr1+/-gtr2 gtr3 plants were collected and allowed to self-pollinate. The following F3 progeny were screened by PCR and homozygous gtr1 gtr2 gtr3 mutants were identified (Figure 4—figure supplement 3).

## Rosette and root analysis of A. thaliana plants

Plants used for rosette and root analysis were grown from sterilized A. thaliana seeds put onto 0.5 mL PCR tubes, which had been filled with agar (1% (w/v) sucrose) and cut at the bottom. A total of 48 tubes were placed into a yellow pipette tip box filled with nutrient solution (one-half strength Murashige and Skoog basal medium). Afterwards, the box was sealed with and incubated in a growth chamber under cultivated at 12 hr days with 70% relative humidity, and a light intensity of 100 mE. Upon root emergence into the growth media, PCR tubes containing the seedlings were transferred on to a perforated screw cap of 50 mL Falcon tubes. The cap was screwed onto the tube and the tubebottom was cut off to allow the root to grow into the media. A total of 30 bottles were arrayed in a closed plastic box filled with MS media. Air was pumped into the media by four tubes from holes at four corners of the box. The box was put into the same growth chamber and plant material was harvested for glucosinolate analysis after two weeks. For micro-grafting, seeds were surface-sterilized by washing in 70% (v/v) ethanol containing 0.05% (v/v) Triton X100 for 5 min followed by washing in water, left on sterile filter paper, and sown on half-strength MS agar plates. The plates were cold-stratified for 2 days followed by vertical growth for 3 to 5 d under long-day conditions (light: 16 hr, 20°C; darkness: 8 hr, 16°C).

## Micro-grafting of A. thaliana seedlings

Micro-grafting of A. thaliana seedlings was performed in a laminar flow cabinet using a dissection microscope as described (Andersen et al., 2014). Briefly, Arabidopsis seedlings grown on MS-containing agar (without sugar) for 4 days were transferred to a sterile one layer thick wet nitrocellulose filter (Whatman NC 45 ST) and two layers of filter paper in a sterile petri dish. The cotyledons were removed and incisions were made on the hypocotyl close to the shoot using a sapphire knife. The root stocks and scions of seedlings were joined using sterile forceps. The plates were sealed using Micropore tape (3M) and incubated vertically under long-day conditions (light: 16 hr, 20°C; darkness: 8 hr, 16°C). Successfully joined seedlings were transferred to MS agar and kept under long-day conditions until the age of 3 weeks and analyzed by LC-MS.

## Desulfo glucosinolate analysis of plant material by LC-MS

Glucosinolates were analyzed as desulfo-glucosinolates by UHPLC/TripleQuad-MS. Chromatography was performed on an Advance UHPLCTM system (Bruker, Bremen, Germany) equipped with a C-18 reversed phase column (Kinetex 1.7 u XB-C18, 10 cm x 2.1 mm, 1.7 µm particle size, Phenomenex, Torrance, CA, USA) by using a 0.05% formic acid in water (v/v) (solvent A)−0.05% formic acid in acetonitrile (v/v) (solvent B) gradient at a flow rate of 0.4 ml*min−1. The column temperature was maintained at 40°C. The gradient applied was as follows: 2% B (0.5 min), 2–30% (0.7 min), 30–100% (0.8 min), 100% B (0.5 min), 100–2% B (0.1 min), and 2% B (1.4 min). The liquid chromatography was coupled to an EVOQ Elite TripleQuad mass spectrometer (Bruker, Bremen, Germany) equipped with an electrospray ion source (ESI) operated in positive ionization mode. The ion spray voltage was maintained at +3500 V. Cone temperature was set to 300°C and cone gas to 20 psi (arbitrary units). Heated probe temperature was set to 400°C and probe gas flow set to 40 psi. Nebulizing gas was set to 60 psi and collision gas to 1.6 mTorr. Desulfo-glucosinolates were monitored based on the following Multiple reaction monitoring (MRM) analyte parent ion → product ion transitions [Collision energy]: 3-methylthiopropyl (3mtp, m/z 328 → 166 [5V]); 3-methylsulfinyl (3msp, m/z 344 → 182 [10V]); 2-propenyl (2-prop, m/z 280→ 118 [5V]); 3-hydroxypropyl (3ohp, m/z 298 → 118 [15V]); 3-benzoyloxy (3bzo, m/z 402 collision gas to 1.6 mTorr. Desulfo-glucosinolates were monitored based on the following Multiple reaction monitoring (MRM) analym/z 294 → 132 [15V]); (R/S)−2-hydroxy-3-butenyl, m/z 310 → 130 [15V]; 4-hydroxybutyl (4ohb, m/z 312 ision gas to 1.6 mTorr. Desulfo-glucosinolates were monitored based on the following Multiple reaction monitoring (MRM) analym/z 294 → 132 [15V]); (R/S)−2-h-methylsulfinylheptyl (7msh, m/z 400 → 238 [7V]); 8-methylthiooctyl (8mto, m/z 398 → 236 [5V]); 8-methylsulfinyloctyl (8mso, m/z 414 → 252 [5V]); indol-3-ylmethyl (I3M, m/z 369 → 207 [10V]); N-methoxy-indol-3-ylmethyl (NMOI3M, m/z 399 → 237 [10V]); 4-methoxy-indol-3-ylmethyl (4MOI3M, m/z 399 → 237 [10V]); p-hydroxybenzyl (pOHB, m/z 346 346 6 OHB, m/z 346 r. Desulfo-glucosinolates were monitored based on the following Multiple reaction monitoring (MRM) relative to the internal standard pOHB calculated from standard curves in control extracts.

## Transporter homology modelling

Homology models for AtGTR1, AtGTR3, Me14G074000 and MeCGTR1 was build using NPF6.3 (PDB: 4OH3) as template (Sun et al., 2014). Transporter homology models were built and optimized using Prime (Jacobson et al., 2004) included in the Schrödinger suite (www.schrodinger.com). All homology models were validated using PROCHECK (Laskowski et al., 1993).

Homology models were embedded into a pre-equilibrated phosphatidyl oleoyl phosphatidylcholine (POPC) bilayer in a periodic boundary condition box with pre-equilibrated Simple Point Charge (SPC) water molecules in addition to Na

![Figure 9.](https://cdn.elifesciences.org/articles/19466/elife-19466-fig9-v1.jpg)

**Figure 9.:** DOI: http://dx.doi.org/10.7554/eLife.19466.029

To determine the intracellular cavity/channel we used 3V (Voss and Gerstein, 2010) via the web interface found at http://3vee.molmovdb.org.

VMD (Humphrey et al., 1996) was used for visualizing and displaying homology models and cavity/channel.
